bad/func_arg_of_type_null.example_compiler_output
ERROR
[1mbad/func_arg_of_type_null.lat:2:10: [1;31merror: [0;1msyntax error at null[m
void foo(null x) {}
         [1;32m^[m
